# scrapyUi

./: .gitignore  =1.51.0  AmazonRanking60_ScrapyUI_Guide.md  CHANGELOG.md  Dockerfile  FLOWER_INTEGRATION.md  LICENSE  MANAGEMENT_GUIDE.md  MANIFEST.in  Makefile  PUPPETEER_TEMPLATES_GUIDE.md  README.md  README_UI_PROJECT.md  WATCHDOG_USAGE_GUIDE.md  YAHOO_SCRAPING_GUIDE.md  add_datetime_fields_migration.py  add_db_save_enabled_migration.py  add_error_message_migration.py  add_schedule_id_migration.py  amazon_omocha_debug.py  amazon_omocha_minimal.py  amazon_omocha_playwright.py  amazon_omocha_simple.py  amazon_omocha_simple_test.py  amazon_omocha_spider.py  amazon_omocha_spider_fixed.py  celery_beat_monitor.sh  celery_worker_monitor.sh  celerybeat-schedule-shm  celerybeat-schedule-wal  check_huhuhuh_sync.py  check_users.py  cleanup_processes.sh  config_manager.sh  create_omocha20_spider.py  create_users.py  create_users_current_db.py  create_users_sqlite.py  data_repair_report.txt  direct_item_count_fix.py  (+59 more)
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci-cd.yml
admin_yahooworld/admin_yahooworld/spiders/: yahooworld.py
architecture/: new-scrapyui-architecture.md
backend/: .env.example  .env.mysql_example  =13.7.0  SCRAPY_DEPRECATION_GUIDE.md  auto_file_cleanup_scheduler.py  auto_fix_failed_tasks.py  auto_recovery.py  auto_repair_daemon.py  celery_health_check.py  celery_monitor.py  celery_worker_stable.py  celerybeat-schedule-shm  celerybeat-schedule-wal  cleanup_duplicates.py  create_admin.py  duplicate_cleanup_tool.py  example_spider_settings.py  final_test_report.py  fix_failed_tasks.py  fix_feed_settings.py  flexible_scheduler_config.py  force_success_daemon.py  jsonl_file_manager.py  manual_scheduler.py  migrate_project_constraints.py  migrate_project_paths.py  nodejs_service_diagnosis.md  process_watchdog.py  progress_command_examples.sh  pytest.ini  requirements.txt  run_integration_tests.py  run_tests.py  schedule_conflict_resolver.py  scheduler_monitor.py  scrapy_ui  scrapy_ui-journal  scrapyui-auto-cleanup.service  scrapyui.service  scrapyui_cli.py  (+9 more)
backend/app/: __init__.py  celery_app.py  cli.py  database.py  main.py  scheduler.py
backend/app/api/: admin.py  ai.py  ai_analysis.py  auth.py  database_config.py  extensions.py  flower.py  internal.py  lightweight_progress.py  microservices.py  notifications.py  performance.py  project_files.py  projects.py  proxies.py  results.py  schedules.py  script_runner.py  settings.py  shell.py  spiders.py  statistics_validation.py  system.py  tasks.py  timezone.py  websocket_progress.py
backend/app/auth/: __init__.py  jwt_handler.py
backend/app/config/: cli_config.py  database_config.py  timezone_config.py
backend/app/core/: feed_config.py
backend/app/examples/: puppeteer_spider_examples.py
backend/app/middleware/: error_middleware.py
backend/app/models/: schemas.py
backend/app/performance/: python313_optimizations.py
backend/app/scrapy_extensions/: lightweight_progress_extension.py  rich_progress_extension.py
backend/app/services/: ai_integration.py  ai_service.py  auto_repair_service.py  batch_statistics_fixer.py  cache_manager.py  config_validator.py  database_service.py  default_settings_service.py  duplicate_prevention_service.py  enhanced_scheduler.py  export_service.py  flower_service.py  git_service.py  immediate_task_statistics_updater.py  integrity_service.py  microservice_client.py  monitoring_service.py  nodejs_client.py  performance_monitor.py  playwright_client.py  playwright_service.py  predictive_analytics.py  scheduler_service.py  (+20 more)
backend/config/: database.yaml
backend/database/: README.md  scrapy_ui.db.backup_paths
backend/scripts/: check_database.py  init_database.py  switch_database.py
backend/tests/: conftest.py
config_backups/: .env_20250606_193809  .env_20250606_193817  .env_20250610_074134
config_backups/celery_20250610_041015/: celery_app.py  running_processes.txt
database/: schema.prisma
docs/: API.md  DEVELOPER_GUIDE.md  MAINTENANCE.md  USER_GUIDE.md  anti-detection.md  architecture-diagram.md  authentication_configuration.md  database_configuration.md  development-features.md  error-handling-logging.md  proxy-setup.md  python313-performance-optimization.md  service-communication-diagram.md  timezone_configuration.md
frontend/: jest.config.js  jest.setup.js  next.config.js  next.config.ts  tailwind.config.ts
frontend/src/: middleware.ts
microservices/: architecture.md  celery_deprecation_plan.sh  cleanup_summary.py  crawlwithwatchdog_migration_report.py  dependency_analysis.py  docker-compose.yml  migration_comparison.py  migration_script.py  next_steps_completion_report.py  scheduler_service.py  start_microservices.sh
microservices/api-gateway/: Dockerfile  main.py  requirements.txt
microservices/result-collector/: Dockerfile  main.py  requirements.txt
microservices/scheduler-service/: Dockerfile  main.py  requirements.txt
microservices/spider-manager/: Dockerfile  main.py  requirements.txt  watchdog_service.py
microservices/test-service/: main.py
microservices/webui/: Dockerfile  main.py
nodejs-service/src/: app-simple.js  app.js
scrapy_projects/AmazonRanking/: scrapy.cfg
scrapy_projects/admin_aiueo/: scrapy.cfg
scrapy_projects/aiueo/: scrapy.cfg
scrapy_projects/aiueo3/: scrapy.cfg
scrapy_projects/demo_amazontest/: scrapy.cfg
scrapy_projects/demo_demoomochaproject/: scrapy.cfg
scrapy_projects/demo_new_project/: scrapy.cfg
scrapy_projects/demo_omochaproject/: scrapy.cfg
scrapy_projects/my_project_d5bb3560/: scrapy.cfg
scrapy_projects/shared_project/: scrapy.cfg
scrapy_projects/shared_project_53cb9a5f/: scrapy.cfg
scrapy_projects/shared_project_61de965a/: scrapy.cfg
scrapy_projects/user1_amazonranking/: scrapy.cfg
scrapy_ui/: nodejs_client.py
scrapy_ui/middlewares/: puppeteer_middleware.py
scripts/: build_package.py  check_large_files.py  cleanup_large_files.py  comprehensive_data_repair.py  scrapyui-celery.service
services/playwright-service/: Dockerfile  app.py  requirements.txt
systemd/: scrapyui.service
(+1224 files in other folders)
